issue-131 - Add pagination to integration cleanups

--- a/tests/integration/targets/cleanup/defaults/main.yml
+++ b/tests/integration/targets/cleanup/defaults/main.yml
@@ -1,3 +1,4 @@
 ---
 vultr_api_url: https://api.vultr.com/v2
 vultr_api_key: "{{ lookup('env', 'VULTR_API_KEY') }}"
+vultr_api_results_per_page: 100
