--- a/tests/integration/targets/cleanup/tasks/cleanup_block_storage.yml
+++ b/tests/integration/targets/cleanup/tasks/cleanup_block_storage.yml
@@ -4,16 +4,31 @@
   block:
     - name: List blocks
       ansible.builtin.uri:
-        url: "{{ vultr_api_url }}/blocks"
+        url: "{{ vultr_api_url }}/blocks?per_page={{ vultr_api_results_per_page }}"
+        headers:
+          Authorization: Bearer {{ vultr_api_key }}
+        status_code: 200
+      register: initial_res
+      no_log: true
+
+    - name: Page through subsequent results
+      ansible.builtin.uri:
+        url: "{{ vultr_api_url }}/blocks?per_page={{ vultr_api_results_per_page }}&cursor={{ res.json.meta.links.next | default(initial_res.json.meta.links.next) }}"
         headers:
           Authorization: Bearer {{ vultr_api_key }}
         status_code: 200
       register: res
+      loop: "{{ range(1, ((initial_res.json.meta.total | int) / (vultr_api_results_per_page | int)) | round(0, 'ceil') | int) | list }}"
+      when: initial_res.json.meta.links.next != ''
       no_log: true
+
+    - name: Compile results
+      ansible.builtin.set_fact:
+        blocks: "{{ initial_res.json.blocks + (res.results | map(attribute='json') | map(attribute='blocks') | flatten) }}"
 
     - name: Found resources
       ansible.builtin.debug:
-        var: res.json
+        var: blocks
 
     - name: Remove all blocks created by this test run
       ansible.builtin.uri:
@@ -23,7 +38,7 @@
           Authorization: Bearer {{ vultr_api_key }}
         status_code: 204
       when: vultr_resource_prefix in item.label
-      with_items: "{{ res.json.blocks }}"
+      with_items: "{{ blocks }}"
       loop_control:
         label: "{{ item.label }}"
       no_log: true
