--- a/tests/integration/targets/cleanup/tasks/cleanup_vpc.yml
+++ b/tests/integration/targets/cleanup/tasks/cleanup_vpc.yml
@@ -4,16 +4,31 @@
   block:
     - name: List vpcs
       ansible.builtin.uri:
-        url: "{{ vultr_api_url }}/vpcs"
+        url: "{{ vultr_api_url }}/vpcs?per_page={{ vultr_api_results_per_page }}"
+        headers:
+          Authorization: Bearer {{ vultr_api_key }}
+        status_code: 200
+      register: initial_res
+      no_log: true
+
+    - name: Page through subsequent results
+      ansible.builtin.uri:
+        url: "{{ vultr_api_url }}/vpcs?per_page={{ vultr_api_results_per_page }}&cursor={{ res.json.meta.links.next | default(initial_res.json.meta.links.next) }}"
         headers:
           Authorization: Bearer {{ vultr_api_key }}
         status_code: 200
       register: res
+      loop: "{{ range(1, ((initial_res.json.meta.total | int) / (vultr_api_results_per_page | int)) | round(0, 'ceil') | int) | list }}"
+      when: initial_res.json.meta.links.next != ''
       no_log: true
+
+    - name: Compile results
+      ansible.builtin.set_fact:
+        vpcs: "{{ initial_res.json.vpcs + (res.results | map(attribute='json') | map(attribute='vpcs') | flatten) }}"
 
     - name: Found resources
       ansible.builtin.debug:
-        var: res.json
+        var: vpcs
 
     - name: Remove all vpcs created by this test run
       ansible.builtin.uri:
@@ -23,7 +38,7 @@
           Authorization: Bearer {{ vultr_api_key }}
         status_code: 204
       when: vultr_resource_prefix in item.description
-      with_items: "{{ res.json.vpcs }}"
+      with_items: "{{ vpcs }}"
       loop_control:
         label: "{{ item.description }}"
         pause: 2
@@ -31,3 +46,4 @@
       delay: 3
       register: result
       until: result is not failed
+      no_log: true
