Issue #135 - Specify object storage tier level

--- a/tests/integration/targets/object_storage/defaults/main.yml
+++ b/tests/integration/targets/object_storage/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
 vultr_object_storage_name: "{{ vultr_resource_prefix }}-object-storage"
+vultr_object_storage_tier: Standard
 vultr_object_storage_cluster1: del1.vultrobjects.com
 vultr_object_storage_cluster2: ams1.vultrobjects.com
