WIP - Add module vfs_info module
This module pulls a list of virtual file systems from Vultr.

This commit is a WIP because the unit tests require the upcoming vfs
module, which does not exist.

--- a/tests/integration/targets/cleanup/tasks/cleanup_all.yml
+++ b/tests/integration/targets/cleanup/tasks/cleanup_all.yml
@@ -14,6 +14,7 @@
 - ansible.builtin.import_tasks: cleanup_user.yml
 - ansible.builtin.import_tasks: cleanup_dns_domain.yml
 - ansible.builtin.import_tasks: cleanup_block_storage.yml
+- ansible.builtin.import_tasks: cleanup_vfs.yml
 - ansible.builtin.import_tasks: cleanup_startup_script.yml
 - ansible.builtin.import_tasks: cleanup_reserved_ip.yml
 - ansible.builtin.import_tasks: cleanup_network.yml
