--- a/.github/workflows/sanity.yml
+++ b/.github/workflows/sanity.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   sanity:
     name: Sanity (${{ matrix.ansible }})
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     defaults:
       run:
         working-directory: ansible_collections/vultr/cloud
@@ -25,6 +25,7 @@ jobs:
           - stable-2.15
           - stable-2.16
           - stable-2.17
+          - stable-2.19
           - devel
     steps:
       - name: Check out code
