--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -15,7 +15,7 @@ on:
 jobs:
   unit-test:
     name: Unit test Ansible ${{ matrix.ansible }} Py${{ matrix.python }}
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     defaults:
       run:
         working-directory: ansible_collections/vultr/cloud
@@ -24,6 +24,7 @@ jobs:
       matrix:
         ansible:
           - stable-2.17
+          - stable-2.19
         python:
           - "3.11"
     steps:
