--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -15,7 +15,7 @@ jobs:
   integration-test:
     name: Integration test Ansible ${{ matrix.ansible }} Py${{ matrix.python }}
     if: ${{ github.event.label.name == 'automation' || github.ref_name == 'main' || github.event_name == 'schedule' }}
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     defaults:
       run:
         working-directory: ansible_collections/vultr/cloud
@@ -25,9 +25,10 @@ jobs:
       matrix:
         ansible:
           - stable-2.17
+          - stable-2.18
           - stable-2.19
         python:
-          - "3.11"
+          - "3.12"
     steps:
       - name: Check out code
         uses: actions/checkout@v4
