--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -15,6 +15,8 @@ action_groups:
     - firewall_rule_info
     - instance
     - instance_info
+    - load_balancer
+    - load_balancer_info
     - object_storage
     - object_storage_cluster_info
     - object_storage_info
