workflows and rever unit test change

--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -64,6 +64,6 @@ jobs:
           integration
           --docker
           -v
-          --color
+          --color yes
           --continue-on-error
           cloud/vultr/_reset_cloud
