--- a/.github/workflows/sanity.yml
+++ b/.github/workflows/sanity.yml
@@ -41,4 +41,4 @@ jobs:
         run: pip install https://github.com/ansible/ansible/archive/${{ matrix.ansible }}.tar.gz --disable-pip-version-check
 
       - name: Run sanity tests
-        run: ansible-test sanity --docker -v --color
+        run: ansible-test sanity --docker -v --color yes
