--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -11,7 +11,7 @@ jobs:
   integration-test:
     name: Cleaning up cloud test env
     if: ${{ github.event.label.name == 'cleanup' || github.event_name == 'schedule' }}
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     defaults:
       run:
         working-directory: ansible_collections/vultr/cloud
@@ -20,9 +20,9 @@ jobs:
       fail-fast: false
       matrix:
         ansible:
-          - stable-2.17
+          - stable-2.18
         python:
-          - "3.11"
+          - "3.12"
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -64,6 +64,6 @@ jobs:
           integration
           --docker
           -v
-          --color
+          --color yes
           --continue-on-error
           cloud/vultr/_reset_cloud
