--- a/.github/workflows/sanity.yml
+++ b/.github/workflows/sanity.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   sanity:
     name: Sanity (${{ matrix.ansible }})
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     defaults:
       run:
         working-directory: ansible_collections/vultr/cloud
@@ -22,9 +22,8 @@ jobs:
       # https://docs.ansible.com/ansible/latest/reference_appendices/release_and_maintenance.html#ansible-core-support-matrix
       matrix:
         ansible:
-          - stable-2.15
-          - stable-2.16
           - stable-2.17
+          - stable-2.18
           - stable-2.19
           - devel
     steps:
@@ -36,10 +35,10 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.12"
 
       - name: Install ansible-base (${{ matrix.ansible }})
         run: pip install https://github.com/ansible/ansible/archive/${{ matrix.ansible }}.tar.gz --disable-pip-version-check
 
       - name: Run sanity tests
-        run: ansible-test sanity --docker -v --color
+        run: ansible-test sanity --docker -v --color yes
