--- a/tests/integration/targets/load_balancer/defaults/main.yml
+++ b/tests/integration/targets/load_balancer/defaults/main.yml
@@ -1,34 +1,33 @@
 ---
 load_balancer_defaults:
-  label: test-load-balancer
+  label: "{{ vultr_resource_prefix }}_load_balancer"
   region: ewr
   state: present
   forwarding_rules:
     - frontend_port: 80
+      frontend_protocol: http
       backend_port: 8080
-      protocol: http
-    - frontend_port: 443
-      backend_port: 8443
-      protocol: https
+      backend_protocol: http
   balancing_algorithm: roundrobin
   ssl_redirect: true
-  http2: true
+  http2: false
   http3: false
   nodes: 1
   timeout: 600
-  # Optional fields, uncomment and adjust as needed:
-  # health_check:
-  #   protocol: http
-  #   port: 80
-  #   path: /
-  #   interval: 10
-  #   response_timeout: 5
-  #   unhealthy_threshold: 3
-  #   healthy_threshold: 5
-  # proxy_protocol: false
-  # sticky_session: {}
-  # instances: []
-  # vpc: ""
-  # firewall_rules: []
-  # auto_ssl: {}
-  # global_regions: []
+  health_check:
+    protocol: http
+    port: 80
+    path: /health
+    check_interval: 10
+    response_timeout: 5
+    unhealthy_threshold: 3
+    healthy_threshold: 5
+  proxy_protocol: false
+  firewall_rules:
+    - port: 80
+      source: 0.0.0.0/0
+      ip_type: v4
+    - port: 443
+      source: 0.0.0.0/0
+      ip_type: v4
+  global_regions: []
