--- a/tests/integration/targets/load_balancer/tasks/main.yml
+++ b/tests/integration/targets/load_balancer/tasks/main.yml
@@ -1,6 +1,6 @@
 - block:
     - ansible.builtin.import_tasks: tests.yml
-  # always:
-  #   - ansible.builtin.import_role:
-  #       name: cleanup
-  #       tasks_from: cleanup_load_balancer
+  always:
+    - ansible.builtin.import_role:
+        name: cleanup
+        tasks_from: cleanup_load_balancer
